<resources>
    <string name="app_name">aviato</string>
    <string name="text_home">Home</string>
    <string name="text_search">Search</string>
    <string name="text_favourites">Favourites</string>
    <string name="text_recent">Recent</string>
    <string name="text_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
