<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favourites"
        android:enabled="true"
        android:icon="@drawable/favourites"
        android:title="@string/text_favourites"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/text_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/recent"
        android:enabled="true"
        android:icon="@drawable/recent"
        android:title="@string/text_recent"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/person"
        android:title="@string/text_account"
        app:showAsAction="ifRoom" />

</menu>